# NIST-SURF-2022

./: README.md
BOD files/: tetrahedron.bod
BOD files/BOD files/: prova.bod
FastestClosestPoint/: CMakeLists.txt  bounding_sphere.h  fcpw.cpp  obj_to_bod.cpp  overlap.cpp  read_obj.h
ZenoClosestPoint/: CMakeCache.txt  CMakeLists.txt  Makefile  bounding_sphere.h  cmake_install.cmake  query.cpp  read_obj.h
benchmark/: CMakeLists.txt  README.md  analysis.py  benchmark.py  benchmark_fcpw.cpp  compare_results.py
